Make sure the canvas focus border is removed any time a content node within the document becomes focused.  Bug 235522, r=danm, sr=darin.